Return the url of the view instead of the url of the url navigator.

That way if a wrong protocol had been entered the currently watched directory will be returned.
BUG:274890
REVIEW:101580