src/dolphinviewcontainer.cpp
@@ -162,7 +162,7 @@ DolphinViewContainer::~DolphinViewContainer()
 
 KUrl DolphinViewContainer::url() const
 {
-    return m_urlNavigator->locationUrl();
+    return m_view->url();
 }
 
 void DolphinViewContainer::setActive(bool active)
